--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,11 +4,12 @@
     left: 0;
     right: 0;
     height: 16.5rem;
+    height: 160px;
     width: 100%;
     display: flex;
     align-items: center;
     z-index: 10;
-    padding: 0 4.0rem;
+    /* padding: 0 4.0rem; */
     color: white;
     background-image: var(--header-gradient);
 }
@@ -39,10 +40,10 @@
     border-radius: 3.0rem;
     border: .3rem solid rgba(255, 255, 255, 0.2);
     color: white;
-    height: 6.4rem;
+    height: 64px;
     align-items: center;
-    padding: 2.0rem;
-    width: 96.7rem;
+    padding: 17px;
+    width: 100%;
     flex-shrink: 1;
 }
 
@@ -56,7 +57,7 @@
     height: 100%;
     width: 100%;
     margin-left: 1.6rem;
-    font-size: 1.8rem;
+    font-size: 18px;
     font-family: 'helvetica';
     text-transform: uppercase;
     font-feature-settings: 'case' on;
@@ -64,7 +65,7 @@
 
 .searchInput::placeholder {
     color: rgba(255, 255, 255, 0.5);    
-    font-size: 1.8rem;
+    font-size: 18px;
 }
 
 
@@ -109,15 +110,16 @@
 .divider {
     height: 100%;
     border-right: .1rem solid rgba(255, 255, 255, 0.2);
-    margin: 0 2.0rem 0 5.0rem;
+    margin: 0px 32px 0px 50px;
 }
 
-/* .ItemWrappers {
-    display: contents;
-} */
+.ItemWrappers {
+    width: 100%;
+    /* display: contents; */
+}
 
-@media(max-width: 60.0rem) {
+/* @media(max-width: 60.0rem) {
     .ItemWrappers {
         display: none;
     }
-}
+} */
