--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -23,7 +23,7 @@
     top: 125px;
     left: 0;
     right: 0;
-    height: 4.5rem;
+    height: 40px;
     border-radius: 2.4rem 2.4rem 0 0;
     background-color: white;
     z-index: 12;
