--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -6,8 +6,8 @@
     z-index: 21;
     height: 100vh;
 
-    /* display: grid; */
-    /* grid-template-columns: repeat(3, minmax(400px, 1fr)); */
+    display: grid;
+    grid-template-columns: repeat(3, minmax(25rem, 1fr));
 }
 
 .container {
@@ -15,9 +15,11 @@
     flex-direction: column;
     
     background-color: white;
-    padding: 4.7rem 3.4rem 0 4.2rem;
+    /* padding: 4.7rem 3.4rem 0 4.2rem; */
+    padding: 45px 40px;
     width: 100%;
-    /* max-width: 39.8rem; */
+    max-width: 25rem;
+    overflow-x: hidden;
 }
 
 .header {
