--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -1,7 +1,7 @@
 .slider {
-    height: 42.3rem;
+    /* height: 42.3rem; */
     position: relative;
-    margin-bottom: 8.9rem;
+    /* margin-bottom: 8.9rem; */
     
 }
 
