--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -9,9 +9,9 @@
 .tabsWrapper {
     display: flex;
     flex-direction: column;
-    max-width: 65.8rem;
+    /* max-width: 65.8rem; */
     width: 100%;
-    margin-right: 12.0rem;
+    /* margin-right: 12.0rem; */
 }
 
 .tabContent {
@@ -20,7 +20,7 @@
 }
 
 .tabPanelsWrapper {
-    padding-top: 4.0rem;
+    /* padding-top: 4.0rem; */
     display: flex;
     flex-direction: column;
 }
@@ -30,5 +30,6 @@
     width: 100%;
     justify-content: center;
     /* margin: 8.0rem 0; */
-    padding: 6.0rem 2.0rem 8.0rem 8.0rem;
+    /* padding: 6.0rem 2.0rem 8.0rem 8.0rem; */
+
 }
