--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -2,7 +2,7 @@
     /* display: flex; */
     list-style-type: none;
     display: grid;
-    grid-template-columns: repeat(4, minmax(auto, 30.5rem));
+    /* grid-template-columns: repeat(4, minmax(auto, 30.5rem)); */
     /* display: flex;
     justify-content: stretch;
     width: 100%; */
@@ -13,11 +13,11 @@
     flex-direction: column;
     /* max-width: 65.8rem; */
     width: 100%;
-    margin-right: 12.0rem;
+    /* margin-right: 12.0rem; */
 }
 
 .tabPanels {
-    padding-top: 4.0rem;
+    /* padding-top: 4.0rem; */
     
 }
 
@@ -37,27 +37,18 @@
 
 
 .personalInfoWrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: -4.0rem;
+    
 }
 
 
 
 .iconWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 11.6rem;
-    width: 11.6rem;
-    border-radius: 1.2rem;
-    background-image: linear-gradient(15deg, rgba(34, 210, 175, 0.14) 0%, rgba(56, 133, 209, 0.14) 100%);
-    margin-right: 2.4rem;
+    
 }
 
 .header {
     display: flex;
-    margin-bottom: 4.0rem;
+    /* margin-bottom: 4.0rem; */
 }
 
 .headerText {
@@ -68,14 +59,11 @@
 
 .name {
     color: var(--text-color);
-    font-size: 3.2rem;
-    margin-bottom: 1.0rem;
     font-family: 'BPG WEB 002 CAPS';
 }
 
 .orderNo {
     color: var(--text-color);
-    font-size: 1.8rem;
     opacity: 0.5;
     font-weight: 500;
     font-family: 'helvetica';
@@ -99,15 +87,15 @@
 .gridItem {
     display: flex;
     flex-direction: column;
-    min-height: 42.0rem;
-    padding-top: 4.0rem;
+    /* min-height: 42.0rem;
+    padding-top: 4.0rem; */
 }
 
 .addressTitle {
     color: var(--text-color);
-    font-size: 2.4rem;
+    
     /* font-weight: bold; */
-    margin-bottom: 1.8rem;
+    
     font-family: 'BPG WEB 002 CAPS';
     /* text-transform: uppercase;
     font-feature-settings: "case" on; */
@@ -116,8 +104,6 @@
 
 .addressItem {
     display: flex;
-    margin-bottom: 1.5rem;
-    gap: 1.4rem;
     position: relative;
 }
 
@@ -132,7 +118,6 @@
 
 .city {
     font-weight: 600;
-    margin-bottom: .2rem;
 }
 .address {
     margin-bottom: .5rem;
@@ -143,7 +128,6 @@
 }
 
 .labels {
-    font-size: 1.8rem;
     font-family: fira-go;
     color: var(--text-color);
     font-weight: 600;
