--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -31,8 +31,7 @@
 
 .divider {
     /* width: 100%; */
-    border-bottom: .1rem solid rgba(34, 34, 34, 0.2);
-    margin: 0 -4.0rem;
+    /* margin: 0 -4.0rem; */
 }
 
 
