--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -7,7 +7,7 @@
     height: 100vh;
 
     display: grid;
-    grid-template-columns: repeat(3, minmax(25rem, 1fr));
+    grid-template-columns: repeat(3, minmax(390px, 1fr));
 }
 
 .container {
@@ -17,9 +17,10 @@
     background-color: white;
     /* padding: 4.7rem 3.4rem 0 4.2rem; */
     padding: 45px 40px;
-    width: 100%;
-    max-width: 25rem;
+    width: 100vw;
+    max-width: 390px;
     overflow-x: hidden;
+    height: 100%;
 }
 
 .header {
