--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -5,9 +5,9 @@
     bottom: 0;
     z-index: 21;
     height: 100vh;
-
-    display: grid;
-    grid-template-columns: repeat(3, minmax(390px, 1fr));
+    display: flex;
+    /* display: grid;
+    grid-template-columns: repeat(3, minmax(390px, 1fr)); */
 }
 
 .container {
