--- a/styles/fonts/bpg-web-002-caps-master/css/bpg-web-002-caps.css
+++ b/styles/fonts/bpg-web-002-caps-master/css/bpg-web-002-caps.css
@@ -1,9 +1,51 @@
 @font-face {
     font-family: 'BPG WEB 002 Caps';
-    src: url('../fonts/bpg-web-002-caps-webfont.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/bpg-web-002-caps-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/bpg-web-002-caps-webfont.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/bpg-web-002-caps-webfont.woff') format('woff'), /* Pretty Modern Browsers */
-         url('../fonts/bpg-web-002-caps-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/bpg-web-002-caps-webfont.svg#bpg_web_002_capsregular') format('svg'); /* Legacy iOS */
+    src: url('../fonts/bpg-web-002-caps-webfont.eot');
+    /* IE9 Compat Modes */
+    src: url('../fonts/bpg-web-002-caps-webfont.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/bpg-web-002-caps-webfont.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/bpg-web-002-caps-webfont.woff') format('woff'),
+        /* Pretty Modern Browsers */
+        url('../fonts/bpg-web-002-caps-webfont.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/bpg-web-002-caps-webfont.svg#bpg_web_002_capsregular') format('svg');
+    /* Legacy iOS */
+}
+
+@font-face {
+    font-family: 'FiraGO-Regular';
+    src: url('../fonts/FiraGO-Regular.woff2') format('woff2'),
+        url('../fonts/FiraGO-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'FiraGO-Medium';
+    src: url('../fonts/FiraGO-Medium.woff2') format('woff2'),
+        url('../fonts/FiraGO-Medium.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'FiraGO-Bold';
+    src: url('../fonts/FiraGO-Bold.woff2') format('woff2'),
+        url('../fonts/FiraGO-Bold.woff') format('woff');
+    font-weight: bolder;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'FiraGO-SemiBold';
+    src: url('../fonts/FiraGO-SemiBold.woff2') format('woff2'),
+        url('../fonts/FiraGO-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
 }
