--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -123,3 +123,21 @@
         display: none;
     }
 } */
+
+@media only screen and (min-width: 1200px) and (max-width: 1600px){
+    .search-wrapper {
+        display: flex;
+        border-radius: 2.0rem;
+        border: .15rem solid rgba(255, 255, 255, 0.2);
+        color: white;
+        height: 46px;
+        align-items: center;
+        padding: 10px;
+        width: 690px;
+        flex-shrink: 1;
+        margin-top: 5px;
+    }
+    .searchInput {
+        margin-left: 0.5rem;
+    }
+}
