--- a/styles/swiper-styles.css
+++ b/styles/swiper-styles.css
@@ -50,4 +50,7 @@
   } */
   .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
     bottom: -5.0rem!important;
+    /* height: 4px;
+    margin-right: 1px;
+    width: 20px; */
   }
