--- a/styles/swiper-styles.css
+++ b/styles/swiper-styles.css
@@ -15,6 +15,7 @@
     --swiper-pagination-bullet-height: 0.6rem;
   
   }
+
   .swiper-pagination-bullet-active{
     --swiper-pagination-bullet-width: 3.6rem;
   }
@@ -54,4 +55,17 @@
     margin-right: 5px;
     width: 20px;
     margin-top: -50px;
+  }
+  @media only screen and (min-width: 1200px) and (max-width: 1600px) {
+    .swiper-pagination-bullet {
+      /* height: .6rem;
+      width: 1.2rem; */
+      --swiper-pagination-bullet-width: 1.4rem;
+      border-radius: 1.2rem!important;
+      --swiper-pagination-bullet-horizontal-gap: 0.3rem;
+      --swiper-pagination-bullet-height: 0.35rem;
+    }
+    .swiper-pagination-bullet-active{
+      --swiper-pagination-bullet-width: 2.6rem;
+    }
   }
