--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -143,4 +143,9 @@
     .curve {
         height: 25px;
     }
+    .divider {
+        height: 100%;
+        border-right: .1rem solid rgba(255, 255, 255, 0.2);
+        margin: 0px 12px 0px 40px;
+    }
 }
