--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -306,4 +306,11 @@
       letter-spacing: 1.8px;
       font-weight: 900;
     }
+    .scrollToTopButton {
+      height: 5.4rem;
+      width: 5.4rem;
+    }
+    .scrollButtonIcon {
+      height: 2.0rem;
+    }
 }
