--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -228,13 +228,12 @@
   border: .6rem solid #D5FFF7;
   position: fixed;
   right: 4.0rem;
-  bottom: 40px;
+  bottom: 70px;
   z-index: 3;
   cursor: pointer;
 
   transform: scale(0.5);
-  right: 0;
-  bottom: 0;
+  right: -5px;
 }
 
 .scrollButtonIcon {
