--- a/styles/main.css
+++ b/styles/main.css
@@ -2,3 +2,14 @@
     overflow-y:scroll;
     height:300px;
 }
+.testing{
+    position: fixed;
+    color: red;
+    top: 0;
+    z-index: 20;
+    text-align: center;
+    width: 100%;
+    background: white;
+    padding:5px 0px;
+    font-size:12px;
+}
